--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
@@ -22,18 +23,23 @@
     "@storybook/addon-interactions": "^8.1.6",
     "@storybook/addon-links": "^8.1.6",
     "@storybook/addon-onboarding": "^8.1.6",
+    "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "^8.1.6",
     "@storybook/nextjs": "^8.1.6",
     "@storybook/react": "^8.1.6",
     "@storybook/test": "^8.1.6",
+    "@swc/plugin-styled-components": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-storybook": "^0.8.0",
+    "postcss": "^8.4.38",
     "storybook": "^8.1.6",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
